Fixing big header bar on mobile

--- a/css/video-test.css
+++ b/css/video-test.css
@@ -44,27 +44,34 @@ html, body {
 	text-align: center;
 	color: #fff;
 	font-family: AvenirBlack;
-	padding: 10px;
 }
 
-#mountain {
-	display: inline-block;
-	vertical-align: middle;
+
+@media (max-width: 600px) { /* mobile */
+	#header-flex {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	#mountain img {
+		width: 15vw;
+	}	
 }
 
-#mountain img {
-	width: auto;
-	height: 10vh;
-}
+@media (min-width: 600px) { /* desktop */
+	#mountain {
+		float: left;
+	}
 
-@media (max-width: 600px) {
 	.mailto {
 		float: right;
-		margin-right: 10px;
+		padding-top: 15px;
 	}
 }
 
-#black-header { line-height: 75px; }
+
+
 #black-header a:link { color: #fff; text-decoration: none; } 
 #black-header a:visited { color: #fff; text-decoration: none; } 
 #black-header a:hover { color: #fff; text-decoration: none; } 
